sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:13: error: ';' expected but integer literal found.
      }j += 1
            ^